flake8: s/ignore/ignore-extend/ fix

--- a/tox.ini
+++ b/tox.ini
@@ -11,5 +11,5 @@ python_files = linux_utils/tests.py
 
 [flake8]
 exclude = .tox
-ignore = D211,D400,D401
+ignore-extend = D211,D400,D401
 max-line-length = 120
